search game input

--- a/frontend/src/Games/style.css
+++ b/frontend/src/Games/style.css
@@ -1,4 +1,12 @@
-.container {
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+.searchInput {
+  width: 300px;
+}
+
+.content {
   display: flex;
   flex-direction: row;
 }
