--- a/frontend/src/Games/components/game/styles.scss
+++ b/frontend/src/Games/components/game/styles.scss
@@ -1,5 +1,6 @@
-.game {
+.gameSection {
   display: flex;
+  flex-direction: column;
   gap: 10px;
   padding: 30px 0;
   border-bottom: 1px solid #e0e0e0;
@@ -7,6 +8,7 @@
   &__image {
     width: 200px;
     height: fit-content;
+    align-self: center;
   }
 
   &__info {
@@ -18,10 +20,25 @@
   &__title {
     font-weight: 600;
     font-size: 1.5rem;
+    text-align: center;
   }
 
   &__playLink {
     align-self: flex-end;
     width: 120px;
+  }
+}
+
+@media (min-width: 600px) {
+  .gameSection {
+    flex-direction: row;
+
+    &__image {
+      align-self: flex-start;
+    }
+
+    &__title {
+      text-align: start;
+    }
   }
 }
