--- a/frontend/src/Games/components/gamesList/styles.scss
+++ b/frontend/src/Games/components/gamesList/styles.scss
@@ -1,10 +1,15 @@
 .gamesList {
-  flex-grow: 1;
+  width: 100%;
 
   &__title {
     font-size: 2rem;
     font-weight: 600;
     padding-bottom: 10px;
     border-bottom: 1px solid #e0e0e0;
+  }
+
+  &__noGames {
+    display: flex;
+    margin-top: 10px;
   }
 }
