--- a/frontend/src/Games/components/categories/styles.scss
+++ b/frontend/src/Games/components/categories/styles.scss
@@ -5,10 +5,15 @@
   gap: 10px;
   min-width: 300px;
 
+  &__list {
+    padding: 0;
+  }
+
   &__category {
     font-size: 1.2rem;
     font-weight: 600;
     cursor: pointer;
+    list-style-type: none;
   }
 
   &__title {
@@ -16,5 +21,6 @@
     font-weight: 600;
     padding-bottom: 10px;
     border-bottom: 1px solid #e0e0e0;
+    margin: 0;
   }
 }
